fix sizing and spacing of video

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -86,6 +86,11 @@
 .video {
   text-align: center;
   margin-bottom: 10px;
+  iframe {
+    border-left: 0px;
+    border-right: 0px;
+    margin-left: -25px;
+  }
 }
 
 .row-centered {
